<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/title_H1"
        android:layout_marginTop="@dimen/field_margin_vert"
        android:layout_marginBottom="@dimen/field_margin_vert"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/bt_test_fragment"
        android:layout_width="150dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/save" />
    <Button
        android:id="@+id/button_test"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/test" />
    <LinearLayout
        android:id="@+id/main_preview"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </LinearLayout>


</LinearLayout>