<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_title"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/title_H1"
        android:layout_marginTop="@dimen/field_margin_vert"
        android:layout_marginBottom="@dimen/field_margin_vert"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:hint="@string/login"
        android:layout_height="@dimen/standart_field_height"
        android:textSize="@dimen/fields_text_size"
        android:layout_marginBottom="@dimen/field_margin_vert"
        />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:layout_height="@dimen/standart_field_height"
        android:textSize="@dimen/fields_text_size"
        android:layout_marginBottom="@dimen/field_margin_vert"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/button_registration"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/registration" />
        <Button
            android:id="@+id/button_log_in"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_for_err"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/title_H1"
        android:layout_marginTop="@dimen/field_margin_vert"
        android:layout_marginBottom="@dimen/field_margin_vert"
        android:textAlignment="center"
        />
</LinearLayout>